# scholarhub

./: .dockerignore  .env.example  .gitattributes  .gitignore  .node-version  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_fk_and_unique_constraints.py  003_add_resource_submissions.py  004_make_venue_nullable_and_add_review_fields.py  005_add_reading_lists.py  006_add_user_token_version.py
backend/app/: main.py  schemas.py
backend/app/api/: auth.py  deps.py  disciplines.py  favorites.py  history.py  reading_lists.py  resources.py  submissions.py  users.py
backend/app/core/: config.py  limiter.py  logging.py  security.py  util.py
backend/app/db/: init.py  session.py
backend/app/middleware/: __init__.py  max_body.py  request_logging.py
backend/app/models/: models.py
backend/scripts/: __init__.py  backup.sh  cleanup.sh  create_admin.py  restore.sh  seed.py  seed_resources.py
backend/tests/: conftest.py  test_admin_e2e.py  test_api_version.py  test_auth.py  test_auth_cookie.py  test_config_security.py  test_db_stability.py  test_exception_handlers.py  test_favorites.py  test_field_validation.py  test_history.py  test_log_sanitization.py  test_max_body_size.py  test_rate_limit_redis.py  test_reading_lists.py  test_resources.py  test_submissions.py  test_users.py
frontend/: .env.test  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.backend.sh  (+2 more)
(+144 files in other folders)
