[project]
name = "scholarhub-api"
version = "1.2.0"
description = "ScholarHUB backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "limits[redis]>=3.14.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
# Exclude tests, migrations, and scripts from SAST scanning.
exclude_dirs = ["tests", "alembic", "scripts"]
# Focus on medium and high severity issues.
level = "MEDIUM"
confidence = "MEDIUM"

[tool.bandit.assert_used]
# Assert statements are fine in non-test code for invariants.
skips = ["app/core/config.py"]
